# routes/platformRoutes.js
@@ -30,8 +30,9 @@ const host = [verifyToken, authorizeRole('host'), requireVerifiedHost];
 router.get('/host/staff', ...host, c.listStaff);
 router.post('/host/staff/invite', ...host, c.inviteStaff);
 router.delete('/host/staff/:staffId', ...host, c.revokeStaff);
-router.get('/host/balance', ...host, c.hostBalance);
-router.get('/host/ledger', ...host, c.hostLedger);
+const { requireFinanceAccess } = require('../middlewares/hostPermission');
+router.get('/host/balance', ...host, requireFinanceAccess(), c.hostBalance);
+router.get('/host/ledger', ...host, requireFinanceAccess(), c.hostLedger);
 router.get('/host/addons', ...host, c.listAddOns);
 router.post('/host/addons', ...host, c.createAddOn);
 router.get('/host/blackouts', ...host, c.listBlackouts);
